// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render disabled 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "padding": 10,
    }
  }
>
  <IncrementDecrementButtons
    max={2}
    min={1}
    number={2}
    numberStyle={
      Object {
        "padding": 10,
      }
    }
    onDecrement={[MockFunction]}
    onIncrement={[MockFunction]}
    showNumber={true}
  />
</View>
`;

exports[`renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Button
    icon={
      <Icon
        color="#5F738C"
        fontSize={14}
        name="minus"
      />
    }
    onPress={[MockFunction]}
    touchable={true}
  />
  <Button
    icon={
      <Icon
        color="#5F738C"
        fontSize={14}
        name="plus"
      />
    }
    onPress={[MockFunction]}
    touchable={true}
  />
</View>
`;

exports[`shows number 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "padding": 10,
    }
  }
>
  <IncrementDecrementButtons
    max={3}
    min={1}
    number={2}
    numberStyle={
      Object {
        "padding": 10,
      }
    }
    onDecrement={[MockFunction]}
    onIncrement={[MockFunction]}
    showNumber={true}
  />
</View>
`;
